Fix header overlapping on inner pages by adding margin-top to breadcrumb-wrapper

--- a/public/demo-8/assets/css/main.css
+++ b/public/demo-8/assets/css/main.css
@@ -2106,22 +2106,21 @@ span {
   overflow: hidden;
   z-index: 9;
   border-radius: 20px;
-  margin: 0 100px;
-  margin-top: 100px;
+  margin: 130px 100px 0;
 }
 @media (max-width: 1600px) {
   .breadcrumb-wrapper {
-    margin: 0 50px;
+    margin: 130px 50px 0;
   }
 }
 @media (max-width: 1399px) {
   .breadcrumb-wrapper {
-    margin: 0 30px;
+    margin: 130px 30px 0;
   }
 }
 @media (max-width: 1199px) {
   .breadcrumb-wrapper {
-    margin: 0 20px;
+    margin: 130px 20px 0;
   }
 }
 .breadcrumb-wrapper .page-heading {
